Images view for results and selected cards

--- a/src/Client/css/landing.css
+++ b/src/Client/css/landing.css
@@ -1,3 +1,11 @@
 .is-horizontal-center {
-    justify-content: center;
+    align-self: center
+}
+
+.is-bottom {
+    align-self: flex-end
+}
+
+.stack {
+    flex-direction: column
 }
